[package]
name = "voluspa-kernel"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

[dependencies]
bootloader = { version = "0.9.19", features = ["map_physical_memory"] }
x86_64 = "0.14.4"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
uart_16550 = "0.2.15"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"